# arcore-android-sdk

my project/Empty2HelloAR/: .gitignore  settings.gradle
my project/Empty2HelloAR/app/: CMakeLists.txt  build.gradle
my project/Empty2HelloAR/app/src/main/: AndroidManifest.xml
my project/Empty2HelloAR/app/src/main/cpp/: Application.cpp  Application.h
my project/Empty2HelloAR/app/src/main/java/com/example/empty2helloar/: ApplicationInterface.kt  MainActivity.kt
my project/Empty2HelloAR/app/src/test/java/com/example/empty2helloar/: ExampleUnitTest.kt
myProject/Empty2HelloAR/: README.md
myProject/Empty2HelloAR/app/: CMakeLists.txt  build.gradle
myProject/Empty2HelloAR/app/src/androidTest/java/com/example/empty2helloar/: ExampleInstrumentedTest.kt
myProject/Empty2HelloAR/app/src/main/: AndroidManifest.xml
myProject/Empty2HelloAR/app/src/main/cpp/: Application.cpp  Application.h  Log.h
myProject/Empty2HelloAR/app/src/main/java/com/example/empty2helloar/: ApplicationInterface.kt  MainActivity.kt  PermissionHelper.kt
myProject/Empty2HelloAR/app/src/main/res/layout/: activity_main.xml
myProject/Empty2HelloAR/app/src/main/res/values/: strings.xml
myProject/Empty2HelloAR/gradle/wrapper/: gradle-wrapper.properties
